# GmSSL-Python

./: .gitignore  BUNDLED_LIBS.md  README.md  gmssl.py  pyproject.toml
.github/workflows/: README.md  build-gmssl-libs.yml  ci.yml  release.yml
downloaded-libs/gmssl-linux-x86_64/: libgmssl.so.3
downloaded-libs/gmssl-macos-arm64/: libgmssl.3.dylib
downloaded-libs/gmssl-macos-x86_64/: libgmssl.3.dylib
scripts/: run_tests.sh
src/gmssl/: __init__.py  _constants.py  _core.py  _file_utils.py  _lib.py  _pem_utils.py  _random.py  _sm2.py  _sm3.py  _sm4.py  _sm9.py  _version.py  _x509.py  _zuc.py
src/gmssl/_libs/: libgmssl.3.dylib  libgmssl.so.3  libgmssl.so.3.aarch64  libgmssl.so.3.x86_64
tests/: __init__.py  test_additional_methods.py  test_edge_cases.py  test_errors.py  test_gmssl.py  test_thread_safety.py
