[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "gmssl_python"
version = "2.2.2"
authors = [
  { name="Zhi Guan", email="guan@pku.edu.cn" },
]
description = "Python binding of the GmSSL library with ctypes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://gmssl.github.io/GmSSL-Python/"
"Bug Tracker" = "https://github.com/GmSSL/GmSSL-Python/issues"

[tool.uv]
package = false
compile-bytecode = true
concurrent-downloads = 4

[[tool.uv.index]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[dependency-groups]
dev = [
    "pip>=24.0",
    "pytest>=7.4.4",
    "ruff>=0.14.1",
    "setuptools>=68.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
# Enable essential rules - no bullshit, just real problems
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore rules that conflict with good taste
ignore = [
    "E501",  # Line too long - let formatter handle it
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
